修复一处错误